# panel

./: .coderabbit.yaml  .featherpanel.conf  .gitignore  CHANGELOG.md  CNAME  EULA.md  app  count.js  docker-compose.v2.dev.yml  docker-compose.v2.git.yml  docker-compose.yml  featherpanel.code-workspace  makefile  permission_nodes.fpperm
.github/: CODEOWNERS  FUNDING.yml  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: backend.yml  codeql.yml  docker-dev.yml  docker-release.yml  frontend.yml  shell-lint.yml
backend/: .dockerignore  .gitignore  .php-cs-fixer.dist.php  Caddyfile  Dockerfile  cli  composer.json  cron-runner.sh  init.sh  phpcs.xml  phpstan.neon  phpunit.xml  phpunit.xml.dist  setup-code-prod.sh  setup-cron.sh  supervisord.conf
backend/app/: App.php  (+2 more)
frontendv2/: .dockerignore  .gitignore  .license-header  .license-header-vue  .prettierignore  Caddyfile  Dockerfile  ecosystem.config.js  eslint.config.mjs  next.config.ts  nginx.conf  pnpm-workspace.yaml  postcss.config.mjs  tsconfig.json
installer/: install.bash  install.ps1
runner/: .dockerignore  .env.example  Cargo.toml  Dockerfile  featherpanel-async-runner.service
runner/src/: main.rs
runner/src/config/: mod.rs
runner/src/database/: mod.rs
runner/src/encryption/: mod.rs
runner/src/mail/: mod.rs
runner/src/processor/: create.rs  mod.rs  vm.rs
runner/src/proxmox/: actions.rs  client.rs  mod.rs  types.rs
runner/src/redis/: listener.rs  mod.rs
runner/src/settings/: mod.rs
runner/src/types/: mod.rs
(+1213 files in other folders)
