[package]
name = "async-runner"
version = "1.3.4"
edition = "2021"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql"] }
lettre = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dotenv = "0.15"
futures-util = "0.3"
chacha20poly1305 = "0.10"
base64 = "0.22"
once_cell = "1.20"
reqwest = { version = "0.12", features = ["json", "rustls-tls-native-roots"], default-features = false }
urlencoding = "2.1"
regex = "1.11"
chrono = "0.4"
